# easy_safe_sft

./: .gitignore  README.md  pyproject.toml
data/lf_ready/ethos_sft/: dataset_info.json  test.jsonl  test_meta.jsonl  train.jsonl  valid.jsonl  valid_meta.jsonl
data/raw/ethos/: ethos_test.jsonl  ethos_train.jsonl  ethos_val.jsonl
easy_safe_sft/: __init__.py  build_dataset.py  data_loading.py  dataset_builder.py  distill.py  eval_checkpoints.py  prompt_config.py  score_predictions.py  tasks.py  teacher.py  train.py  utils.py  vllm_predict.py
examples/contractnli_reasoning_sft/: run_full.sh  smoke_test.sh  smoke_train.yaml  submit_full.slurm  teacher.yaml  teacher_full.yaml  train_full.yaml
examples/ethos_sft/: build.sh  eval.sh  eval.yaml  smoke_train.yaml  task.yaml  train.sh  train.yaml
examples/ethos_teacher_distillation_reasoning_sft/: distill.sh  eval.sh  eval.yaml  task.yaml  teacher.yaml  train.sh  train.yaml
