[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-safe-sft"
version = "0.1.0"
description = "一个只在外层编排 teacher distillation 和 LlamaFactory SFT 的小工具"
requires-python = ">=3.10"
dependencies = [
  "litellm>=1.61.0",
  "loguru>=0.7.2",
  "PyYAML>=6.0.2",
]

[tool.setuptools]
packages = ["easy_safe_sft"]
